Can add a player to an exisiting team

--- a/doublepower/templates/doublepower/team.html
+++ b/doublepower/templates/doublepower/team.html
@@ -6,11 +6,20 @@
 </head>
 <body>
     <h1>Doublepower</h1>
-    <form method="POST" action="{% url 'doublepower:new_team' %}">
+    <form method="POST" action="{% url 'doublepower:view_team' team.id %}">
         {% csrf_token %}
         {{ player_form }}
         <input type="submit" value="Submit">
     </form>
-
+    <table id="id_player_table">
+        {% for player in team.player_set.all %}
+        <tr>
+            <td>{{ forloop.counter }}</td>
+            <td>{{ player.name }}</td>
+            <td>{{ player.forehand_strength }}</td>
+            <td>{{ player.backhand_strength }}</td>
+        </tr>
+        {% endfor %}
+    </table>
 </body>
 </html>
