--- a/doublepower/templates/doublepower/team.html
+++ b/doublepower/templates/doublepower/team.html
@@ -9,7 +9,7 @@
     <form method="POST" action="{% url 'doublepower:view_team' team.id %}">
         {% csrf_token %}
         {{ player_form }}
-        <input type="submit" value="Submit">
+        <input type="submit" name="action" value="Submit">
     </form>
     <table id="id_player_table">
         {% for player in team.player_set.all %}
@@ -18,6 +18,12 @@
             <td>{{ player.name }}</td>
             <td>{{ player.forehand_strength }}</td>
             <td>{{ player.backhand_strength }}</td>
+            <td>
+                <form method="POST" action="{% url 'doublepower:player_up' team.id player.id %}">
+                    {% csrf_token %}
+                    <input type="submit" name="action" value="Up">
+                </form>
+            </td>
         </tr>
         {% endfor %}
     </table>
