Players can be ranked down using a button

--- a/doublepower/templates/doublepower/team.html
+++ b/doublepower/templates/doublepower/team.html
@@ -24,6 +24,12 @@
                     <input type="submit" name="action" value="Up">
                 </form>
             </td>
+            <td>
+                <form method="POST" action="{% url 'doublepower:player_down' team.id player.id %}">
+                    {% csrf_token %}
+                    <input type="submit" name="action" value="Down">
+                </form>
+            </td>
         </tr>
         {% endfor %}
     </table>
